--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <img class = "display" src="images/ARYAN.png" alt="Profile-pic">
         <h2>Hello.</h2>
         <p class = "intro">
-          I am an iOS and Web Developer. I'm the founder and
-          CEO of The App Brewery. I ❤️ coffee and brew my own
+          I am a junior iOS and Web Developer. Currently a student
+          at IP University . I ❤️ coffee and brew my own
           beers.
         </p>
       </div>
@@ -51,11 +51,12 @@
         </div>
         <div class="skill-row">
           <img class="hotel" src="images/hotel.png" alt="" />
-          <h3>Hot wings challenge</h3>
+          <h3>Python Project</h3>
           <p class = "project-description">
-            But my best skill is actually in eating hot wings. I am the 
-            undisputed queen of hot wing challenges. Ghost Peppers and 
-            Carolina Reapers are my favourite snacks.
+            Instantly translate texts, words, paragraphs from one language to another.
+            The objective of this python project is to translate text content from one 
+            language to any other language in real-time with a button click. It is recommended 
+            to create a graphical user interface using tkinter and provide a nice user experience.
           </p>
         </div>
       </div>
