--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.instagram.com/just_being_aryan/">Instagram</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
       <p class = "copyright">© Aryan Sachdeva.</p>
     </div>
