--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </p>
         <br>
         <br>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <a class="btn" href="mailto:aryansachdevaa@email.com">CONTACT ME</a>
       </div>
     </div>
 
