--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <br />
     <div class="middle-container">
       <div class="profile">
-        <img class = "display" src="images/ARYAN.png" alt="Profile-pic">
+        <img class = "display" src="images/Me.jpg" alt="Profile-pic">
         <h2>Hello.</h2>
         <p class = "intro">
           I am a junior iOS and Web Developer. Currently a student
